--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
     </select>
 
     <div class="timer">Thời gian còn lại: <span id="timer">60</span> giây</div>
+  <label for="custom-text">✏️ Dán đoạn văn bạn muốn luyện:</label>
+<textarea id="custom-text" placeholder="Dán đoạn văn tại đây..." rows="4" style="width:100%;"></textarea>
+<button id="start-custom">Bắt đầu luyện đoạn văn này</button>
 
     <div id="text-display"></div>
     <textarea id="text-input" placeholder="Bắt đầu gõ tại đây..." autofocus></textarea>
